@@ -8,9 +8,13 @@
 <INPUT type="submit" class="hiddenbtn">
 </p>
 <TABLE class="lmsbox">
+	<COLGROUP>
+		<COL style="width: 1%;">
+		<COL style="width: 99%;">
+	</COLGROUP>
 	<THEAD>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr">
+		<TD class="bold nobr">
 			<IMG src="img/network.gif" alt="">
 			{trans("Network name:")}
 		</TD>
@@ -21,11 +25,11 @@
 	</THEAD>
 	<TBODY>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/ip.gif" alt=""> {trans("Network address/mask:")}</TD>
+		<TD class="bold nobr"><IMG src="img/ip.gif" alt=""> {trans("Network address/mask:")}</TD>
 		<TD class="bold"><INPUT type="text" size="23" name="netadd[address]" value="{$netadd.address}" required {tip text="Enter IP address and select mask" trigger="address"}> / <SELECT size="1" title="Prefixlen" name="netadd[prefix]">{section name=prefixlist loop=$prefixlist.id}<OPTION value="{$prefixlist.id[prefixlist]}"{if $prefixlist.id[prefixlist] == $netadd.prefix} SELECTED{/if}>{$prefixlist.value[prefixlist]}</OPTION>{/section}</SELECT>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/mac.gif" alt=""> {trans("Interface:")}</TD>
+		<TD class="bold nobr"><IMG src="img/mac.gif" alt=""> {trans("Interface:")}</TD>
 		<TD>
 			<INPUT type="text" size="23" name="netadd[interface]" value="{$netadd.interface}" {tip text="Enter network interface (optional)" trigger="interface"}>
 			<span class="bold">{trans("vlan:")}</span>
@@ -33,42 +37,42 @@
 		</TD>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/node.gif" alt=""> {trans("Domain:")}</TD>
+		<TD class="bold nobr"><IMG src="img/node.gif" alt=""> {trans("Domain:")}</TD>
 		<TD><INPUT type="text" size="23" name="netadd[domain]" value="{$netadd.domain}" {tip text="Enter network domain (optional)" trigger="domain"}></TD>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/gateway.gif" alt=""> Gateway:</TD>
+		<TD class="bold nobr"><IMG src="img/gateway.gif" alt=""> Gateway:</TD>
 		<TD><INPUT type="text" size="23" name="netadd[gateway]" value="{$netadd.gateway}" {tip text="Enter gateway address (optional)" trigger="gateway"}></TD>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" rowspan="2" class="bold nobr"><IMG src="img/dns.gif" alt=""> {trans("DNS servers:")}</TD>
+		<TD rowspan="2" class="bold nobr"><IMG src="img/dns.gif" alt=""> {trans("DNS servers:")}</TD>
 		<TD><INPUT type="text" size="23" name="netadd[dns]" value="{$netadd.dns}" {tip text="Enter primary DNS address (optional)" trigger="dns"}></TD>
 	</TR>
 	<TR>
 		<TD><INPUT type="text" size="23" name="netadd[dns2]" value="{$netadd.dns2}" {tip text="Enter secondary DNS address (optional)" trigger="dns2"}></TD>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/wins.gif" alt=""> {trans("WINS server:")}</TD>
+		<TD class="bold nobr"><IMG src="img/wins.gif" alt=""> {trans("WINS server:")}</TD>
 		<TD><INPUT type="text" size="23" name="netadd[wins]" value="{$netadd.wins}" {tip text="Enter WINS address (optional)" trigger="wins"}></TD>
 	</TR>
 	<tr>
-		<TD style="width: 1%;" class="fleft bold nobr">
+		<TD class="bold nobr">
 			<img src="img/customer.gif" alt=""> {trans("Customer:")}
 		</td>
-		<TD style="width: 98%;" colspan="3">
+		<TD>
 			{customerlist form="netadd" customers=$customers selected=$netadd.ownerid selectname="netadd[customerid]" inputname="netadd[ownerid]" selecttip="Assign network to customer" inputtip="Enter customer ID (optional)"}
 		</td>
 	</tr>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/dhcpstart.gif" alt=""> {trans("Begin of DHCP range:")}</TD>
+		<TD class="bold nobr"><IMG src="img/dhcpstart.gif" alt=""> {trans("Begin of DHCP range:")}</TD>
 		<TD><INPUT type="text" size="23" name="netadd[dhcpstart]" value="{$netadd.dhcpstart}" {tip text="Enter beginning of DHCP range (optional)" trigger="dhcpstart"}></TD>
 	</TR>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/dhcpend.gif" alt=""> {trans("End of DHCP range:")}</TD>
+		<TD class="bold nobr"><IMG src="img/dhcpend.gif" alt=""> {trans("End of DHCP range:")}</TD>
 		<TD><INPUT type="text" size="23" name="netadd[dhcpend]" value="{$netadd.dhcpend}" {tip text="Enter end of DHCP range (optional)" trigger="dhcpend"}></TD>
 	</TR>
 	<tr> 
-		<TD style="width: 1%;" class="fleft bold nobr"><img src="img/host.gif" alt="">{trans("Host:")}</td>
+		<TD class="bold nobr"><img src="img/host.gif" alt="">{trans("Host:")}</td>
 		<td>
 			<select size="1" name="netadd[hostid]" {tip text="Select host" trigger="hostid"}>
 				<option value="0">{trans("- none -")}</option>
@@ -79,13 +83,26 @@
 		</td>
 	</tr>
 	<TR>
-		<TD style="width: 1%;" class="bold nobr"><IMG src="img/info1.gif" alt=""> {trans("Notes:")}</TD>
+		<TD class="bold nobr">
+			<IMG SRC="img/netdev.gif" ALT=""> {trans("Type:")}
+		</TD>
+		<TD class="nobr">
+			{foreach $_SESSIONTYPES as $idx => $sessiontype}
+			<label>
+				{$sessiontype.label}
+				<INPUT TYPE="checkbox" NAME="netadd[authtype][{$idx}]" value="{$idx}" id="authtype{$idx}" {tip text="`$sessiontype.tip`" trigger="authtype`$idx`"}{if $netadd.authtype & $idx} checked{/if}>
+			</label>
+			{/foreach}
+		</TD>
+	</TR>
+	<TR>
+		<TD class="bold nobr"><IMG src="img/info1.gif" alt=""> {trans("Notes:")}</TD>
 		<TD>
 			<TEXTAREA name="netadd[notes]" cols="60" rows="7" {tip text="Enter notes (optional)"}>{$netadd.notes}</TEXTAREA>
 		</TD>
 	</TR>
 	<TR>
-		<TD style="width: 100%;" class="buttons" colspan="2">
+		<TD class="buttons" colspan="2">
 			<A href="javascript:document.netadd.submit();" accesskey="s">{trans("Submit")} <IMG src="img/save.gif" alt=""></A>
 			<A href="?m=netlist">{trans("Cancel")} <IMG src="img/cancel.gif" alt=""></A>
 		</TD>
