@@ -101,6 +101,7 @@ version ?.??.?? (????-??-??):
   - multi node group assignments can be added and deleted from node form [chilan]
   - added global try/catch block as default resort error handler [chilan]
   - ported node group list sort to jquery and ajax [chilan]
+  - support of auth type for networks [chilan]
 
 version 1.11.20 (2016-04-19):
 
